@@ -1,3 +1,7 @@
+=== 2016-12-28
+* Enhancement
+  * Updated Table [] method to return a row that has matching partial text in any column
+  * Updated TableRow [] method to return column that matching partial text in any column
 === 2016-12-27
 * Enhancement
   * Added ability to find span's by title
